--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@react-native-community/slider": "^4.4.2",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
-    "@sentry/react-native": "5.19.1",
+    "@sentry/react-native": "^5.19.1",
     "@sentry/tracing": "^7.107.0",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
     "crypto-js": "^4.2.0",
-    "expo": "~50.0.13",
+    "expo": "~50.0.14",
     "expo-application": "~5.8.3",
     "expo-barcode-scanner": "~12.9.3",
     "expo-checkbox": "~2.7.0",
@@ -38,7 +38,6 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-media-library": "^15.9.1",
-    "expo-permissions": "^14.4.0",
     "expo-router": "~3.4.8",
     "expo-secure-store": "~12.8.1",
     "expo-sharing": "^11.10.0",
@@ -48,8 +47,9 @@
     "expo-web-browser": "~12.8.2",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-bs-simple-datatable": "^1.0.3",
     "react-dom": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "^0.73.6",
     "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1303.0",
     "react-native-chart-kit": "^6.12.0",
@@ -70,16 +70,17 @@
     "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "~0.19.6",
     "rn-fetch-blob": "^0.12.0",
+    "sentry-expo": "^7.2.0",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/lodash": "^4.14.202",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "@types/react-native-modern-datepicker": "^1.0.5",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
+    "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
